--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node":"0.10.x",
+    "node": "0.10.x",
     "npm": "1.3.x"
   },
   "author": "Jerry Chanut",
@@ -16,7 +16,9 @@
     "jade": "~1.3.0",
     "express": "~3.4.8",
     "stylus": "~0.42.3",
-    "mongoose": "~3.8.8"
+    "mongoose": "~3.8.8",
+    "passport": "~0.2.0",
+    "passport-local": "~0.1.6"
   },
   "devDependencies": {
     "bower": "~1.2.8"
