--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular-resource": "~1.2.14",
     "angular-route": "~1.2.14",
     "bootstrap": "~3.1.1",
-    "angular-mocks": "~1.2.14"
+    "angular-mocks": "~1.2.14",
+    "underscore": "~1.6.0"
   }
 }
