--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "jade": "~1.3.0",
-    "express": "~3.4.8",
+    "express": "~4.0.0",
     "stylus": "~0.42.3",
     "mongoose": "~3.8.8",
     "passport": "~0.2.0",
-    "passport-local": "~0.1.6"
+    "passport-local": "~0.1.6",
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "express-session": "~1.0.2",
+    "body-parser": "~1.0.0",
+    "serve-static": "~1.0.2"
   },
   "devDependencies": {
     "bower": "~1.2.8",
