--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Extreme Tech Training",
   "main": "index.js",
   "scripts": {
-    "test": "node ./test/testrunner.js"
+    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
   },
   "engines": {
     "node": "0.10.x",
@@ -13,18 +13,18 @@
   "author": "Jerry Chanut",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "jade": "~1.3.0",
+    "body-parser": "~1.0.0",
+    "compression": "~1.0.1",
+    "cookie-parser": "~1.0.1",
     "express": "~4.0.0",
-    "stylus": "~0.42.3",
+    "express-session": "~1.0.2",
+    "jade": "~1.3.0",
     "mongoose": "~3.8.8",
+    "morgan": "~1.0.0",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "express-session": "~1.0.2",
-    "body-parser": "~1.0.0",
     "serve-static": "~1.0.2",
-    "compression": "~1.0.1"
+    "stylus": "~0.42.3"
   },
   "devDependencies": {
     "bower": "~1.2.8",
