--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Extreme Tech Training",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
+    "test": "./node_modules/gulp/bin/gulp.js test"
   },
   "engines": {
     "node": "0.10.x",
@@ -28,19 +28,22 @@
   },
   "devDependencies": {
     "bower": "~1.2.8",
-    "karma-mocha": "~0.1.1",
-    "mocha": "~1.17.1",
+    "chai": "^1.9.1",
+    "gulp": "^3.8.10",
+    "gulp-exit": "0.0.2",
+    "gulp-mocha": "^2.0.0",
+    "karma": "~0.12",
     "karma-chai-plugins": "~0.2.0",
-    "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.2",
+    "karma-coffee-preprocessor": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-jasmine": "~0.1.5",
-    "karma-coffee-preprocessor": "~0.1.3",
-    "requirejs": "~2.1.11",
-    "karma-requirejs": "~0.2.1",
+    "karma-mocha": "~0.1.1",
     "karma-phantomjs-launcher": "~0.1.2",
-    "karma": "~0.12",
-    "chai": "^1.9.1"
+    "karma-requirejs": "~0.2.1",
+    "karma-script-launcher": "~0.1.0",
+    "mocha": "~1.17.1",
+    "requirejs": "~2.1.11"
   }
 }
