--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai": "^1.9.1",
     "gulp": "^3.8.10",
     "gulp-exit": "0.0.2",
+    "gulp-jshint": "^1.9.0",
     "gulp-mocha": "^2.0.0",
     "karma": "~0.12",
     "karma-chai-plugins": "~0.2.0",
