--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-exit": "0.0.2",
     "gulp-jshint": "^1.9.0",
     "gulp-mocha": "^2.0.0",
+    "jshint-stylish": "^1.0.0",
     "karma": "~0.12",
     "karma-chai-plugins": "~0.2.0",
     "karma-chrome-launcher": "~0.1.2",
