--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Extreme Tech Training",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/gulp/bin/gulp.js test"
+    "test": "./node_modules/gulp/bin/gulp.js test",
+    "start": "node server"
   },
   "engines": {
     "node": "0.10.x",
